# verdict

./: .gitignore  README.md  pyproject.toml
src/seraph/: __init__.py  config.py
src/seraph/core/: baseline.py  checks.py  differ.py  engine.py  gate.py  mutations.py  properties.py  reporter.py  security.py  store.py
src/seraph/hooks/: __init__.py  tier1.py  tier2.py
src/seraph/mcp/: formatters.py  server.py
src/seraph/models/: assessment.py  enums.py
tests/: test_integration.py
tests/cli/: test_cli.py
tests/core/: test_checks.py  test_differ.py  test_engine.py  test_gate.py  test_mutations.py  test_security.py  test_store.py
tests/hooks/: test_hooks.py
tests/mcp/: test_server.py
