[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seraph-ai"
version = "0.2.0"
description = "Code quality gate — mutation testing, static analysis, and risk scoring for AI-generated code"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "evo-hydra"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
keywords = ["code-quality", "mutation-testing", "static-analysis", "mcp", "ai"]
dependencies = [
    "typer>=0.9",
    "rich>=13.0",
    "tomli>=2.0; python_version < '3.11'",
    "mcp>=1.0,<2.0",
]

[project.optional-dependencies]
sentinel = ["git-sentinel>=0.4.0"]
mutation = ["mutmut>=2.4.0"]
dev = ["pytest>=7.0", "pytest-cov", "ruff", "mypy"]
all = ["seraph-ai[sentinel,mutation]"]

[project.scripts]
seraph = "seraph.cli.app:app"
seraph-mcp = "seraph.mcp.server:main"

[project.urls]
Homepage = "https://github.com/evo-hydra/seraph"
Repository = "https://github.com/evo-hydra/seraph"
Issues = "https://github.com/evo-hydra/seraph/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/seraph"]

[tool.hatch.build.targets.sdist]
include = [
    "src/seraph",
    "tests",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]
exclude = [
    "/.plan_file",
    "/plans",
    "/.env",
    "/.venv",
    "/dist",
    "/build",
    "/.pytest_cache",
    "/.ruff_cache",
    "/.mypy_cache",
    "/.niobe",
    "/.sentinel",
    "/.seraph",
    "**/__pycache__",
    "**/.DS_Store",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
src = ["src"]
line-length = 100
